--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/LargeDevicesStyle.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/LargeDevicesStyle.xaml
@@ -1,39 +1,40 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                    x:Class="Healthcare020.Mobile.Resources.LargeDevicesStyle">
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<ResourceDictionary
+    x:Class="Healthcare020.Mobile.Resources.LargeDevicesStyle"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <!--#region RegisterPage style-->
 
-    <!--Path with Logo-->
-    <Style TargetType="Path" x:Key="LogoPath">
+    <!--  Path with Logo  -->
+    <Style x:Key="LogoPath" TargetType="Path">
         <Setter Property="Aspect" Value="UniformToFill" />
         <Setter Property="FlowDirection" Value="LeftToRight" />
         <Setter Property="Data">M574 270.798V0H0C193.374 234.211 284.177 315.236 574 270.798Z</Setter>
         <Setter Property="VerticalOptions" Value="FillAndExpand" />
         <Setter Property="Fill" Value="#65DBDB" />
     </Style>
-    <OnPlatform x:TypeArguments="ImageSource" x:Key="Logo_Revert">
-        <On Platform="Android" Value="healthcare020_350x350_revert.png"></On>
-        <On Platform="UWP" Value="Assets/healthcare020_350x350_revert"></On>
+    <OnPlatform x:Key="Logo_Revert" x:TypeArguments="ImageSource">
+        <On Platform="Android" Value="healthcare020_350x350_revert.png" />
+        <On Platform="UWP" Value="Assets/healthcare020_350x350_revert" />
     </OnPlatform>
-    <Style TargetType="Image" x:Key="LogoImage">
+    <Style x:Key="LogoImage" TargetType="Image">
         <Setter Property="HorizontalOptions" Value="End" />
         <Setter Property="VerticalOptions" Value="Start" />
         <Setter Property="HeightRequest">300</Setter>
         <Setter Property="Source" Value="{StaticResource Logo_Revert}" />
     </Style>
-    <!--/Path with Logo-->
+    <!--  /Path with Logo  -->
 
-    <!--Path with Label-->
-    <Style TargetType="Path" x:Key="TitlePath">
+    <!--  Path with Label  -->
+    <Style x:Key="TitlePath" TargetType="Path">
         <Setter Property="HorizontalOptions" Value="Start" />
         <Setter Property="Aspect" Value="None" />
         <Setter Property="FlowDirection" Value="LeftToRight" />
         <Setter Property="Data">M-1 9.23353e-05C-1 9.23353e-05 175.259 2.191e-05 204.932 9.23353e-05C234.605 0.000162761 239.353 70.0001 204.932 70.0001C170.511 70.0001 -1 70.0001 -1 70.0001V9.23353e-05Z</Setter>
         <Setter Property="Fill" Value="#65DBDB" />
     </Style>
-    <Style TargetType="Label" x:Key="TitleLabel">
+    <Style x:Key="TitleLabel" TargetType="Label">
         <Setter Property="TextColor" Value="White" />
         <Setter Property="Text" Value="Registracija" />
         <Setter Property="HorizontalOptions" Value="Start" />
@@ -42,56 +43,62 @@
         <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}" />
         <Setter Property="Margin">-200,20,0,0</Setter>
     </Style>
-    <Style TargetType="StackLayout" x:Key="TitleLabelStackStyle">
+    <Style x:Key="TitleLabelStackStyle" TargetType="StackLayout">
         <Setter Property="Margin">0,340,0,0</Setter>
         <Setter Property="Orientation">Horizontal</Setter>
         <Setter Property="HorizontalOptions">Start</Setter>
     </Style>
-    <!--/Path with Label-->
+    <!--  /Path with Label  -->
 
-    <Style TargetType="StackLayout" x:Key="RegisterFormStackBody">
+    <Style x:Key="RegisterFormStackBody" TargetType="StackLayout">
         <Setter Property="VerticalOptions" Value="StartAndExpand" />
         <Setter Property="BackgroundColor" Value="{StaticResource LighterSmokeWhite}" />
         <Setter Property="Margin" Value="110,20,110,0" />
     </Style>
 
     <Style x:Key="CustomEntry" TargetType="Entry">
-        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}"></Setter>
-        <Setter Property="TextColor" Value="Black"></Setter>
-        <Setter Property="Margin" Value="20,20,20,0"></Setter>
+        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}" />
+        <Setter Property="TextColor" Value="Black" />
+        <Setter Property="Margin" Value="20,20,20,0" />
     </Style>
 
     <Style x:Key="CustomValidationLabel" TargetType="Label">
-        <Setter Property="FontSize" Value="{StaticResource FontSize-Small}"></Setter>
-        <Setter Property="TextColor" Value="Red"></Setter>
-        <Setter Property="CharacterSpacing" Value="1"></Setter>
-        <Setter Property="Margin" Value="27,3,20,0"></Setter>
+        <Setter Property="FontSize" Value="{StaticResource FontSize-Small}" />
+        <Setter Property="TextColor" Value="Red" />
+        <Setter Property="CharacterSpacing" Value="1" />
+        <Setter Property="Margin" Value="27,3,20,0" />
         <Setter Property="IsVisible">false</Setter>
     </Style>
     <!--#endregion-->
 
     <!--#region General styles-->
-    <OnPlatform x:TypeArguments="ImageSource" x:Key="Logo">
-        <On Platform="Android" Value="healthcare020_350x350.png"></On>
-        <On Platform="UWP" Value="Assets/healthcare020_350x350.png"></On>
+    <OnPlatform x:Key="Logo" x:TypeArguments="ImageSource">
+        <On Platform="Android" Value="healthcare020_350x350.png" />
+        <On Platform="UWP" Value="Assets/healthcare020_350x350.png" />
     </OnPlatform>
 
-    <Style TargetType="Button" x:Key="BigButtonStyle">
-        <Setter Property="CornerRadius" Value="15"></Setter>
-        <Setter Property="Margin" Value="0,25"></Setter>
-        <Setter Property="BackgroundColor" Value="{StaticResource HealthcareCyan}"></Setter>
-        <Setter Property="TextColor" Value="WhiteSmoke"></Setter>
-        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}"></Setter>
+    <Style x:Key="BigButtonStyle" TargetType="Button">
+        <Setter Property="CornerRadius" Value="15" />
+        <Setter Property="Margin" Value="0,25" />
+        <Setter Property="BackgroundColor" Value="{StaticResource HealthcareCyan}" />
+        <Setter Property="TextColor" Value="WhiteSmoke" />
+        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}" />
     </Style>
 
-    <Style TargetType="Button" x:Key="BigButtonSecondaryStyle">
-        <Setter Property="CornerRadius" Value="15"></Setter>
-        <Setter Property="BackgroundColor" Value="Silver"></Setter>
-        <Setter Property="TextColor" Value="WhiteSmoke"></Setter>
-        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}"></Setter>
+    <Style x:Key="BigButtonSecondaryStyle" TargetType="Button">
+        <Setter Property="CornerRadius" Value="15" />
+        <Setter Property="BackgroundColor" Value="Silver" />
+        <Setter Property="TextColor" Value="WhiteSmoke" />
+        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}" />
     </Style>
 
-    <!--Font sizes-->
+    <!--#region IconSizes-->
+    <OnPlatform x:Key="IconSize-Medium" x:TypeArguments="x:Double">
+        <On Platform="Android">65</On>
+    </OnPlatform>
+    <!--#endregion-->
+
+    <!--  Font sizes  -->
     <OnPlatform x:Key="FontSize-Smaller" x:TypeArguments="x:Double">
         <On Platform="UWP">20</On>
         <On Platform="Android">16</On>
@@ -108,7 +115,7 @@
         <On Platform="UWP">29</On>
         <On Platform="Android">26</On>
     </OnPlatform>
-    <!--/Font sizes-->
+    <!--  /Font sizes  -->
 
 
     <!--#region Margin-Responsive-->
@@ -146,30 +153,30 @@
     <!--#endregion-->
 
     <!--#region WelcomePage styles-->
-    <Style TargetType="Path" x:Key="WelcomePageLogoPath">
+    <Style x:Key="WelcomePageLogoPath" TargetType="Path">
         <Setter Property="Data">M519 0C519 47.6698 512.288 94.8729 499.247 138.914C486.206 182.955 467.091 222.972 442.994 256.68C418.897 290.387 390.29 317.126 358.806 335.368C327.322 353.611 293.578 363 259.5 363C225.422 363 191.678 353.611 160.194 335.368C128.71 317.126 100.103 290.387 76.0058 256.68C51.909 222.972 32.7943 182.955 19.7533 138.914C6.71216 94.8729 -2.97919e-06 47.6698 0 -3.17345e-05L259.5 0H519Z</Setter>
-        <Setter Property="Aspect" Value="UniformToFill"></Setter>
+        <Setter Property="Aspect" Value="UniformToFill" />
     </Style>
-    <Style TargetType="CarouselView" x:Key="WelcomePageCarouselStyle">
+    <Style x:Key="WelcomePageCarouselStyle" TargetType="CarouselView">
         <Setter Property="Margin">0,50,0,0</Setter>
     </Style>
-    <Style TargetType="Button" x:Key="BigButtonRadiusStyle">
+    <Style x:Key="BigButtonRadiusStyle" TargetType="Button">
         <Setter Property="CornerRadius">20</Setter>
         <Setter Property="HorizontalOptions">Center</Setter>
         <Setter Property="WidthRequest">400</Setter>
         <Setter Property="HeightRequest">60</Setter>
         <Setter Property="Margin">0,10,0,0</Setter>
-        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}"></Setter>
+        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}" />
     </Style>
     <!--#endregion-->
 
 
     <!--#region LoginPage styles-->
-    <Style TargetType="Entry" x:Key="LoginPageEntryStyle">
-        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}"></Setter>
-        <Setter Property="Margin" Value="0,25"></Setter>
+    <Style x:Key="LoginPageEntryStyle" TargetType="Entry">
+        <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}" />
+        <Setter Property="Margin" Value="0,25" />
     </Style>
-    <Style TargetType="StackLayout" x:Key="LoginFormBodyStyle">
+    <Style x:Key="LoginFormBodyStyle" TargetType="StackLayout">
         <Setter Property="Padding">50,20</Setter>
         <Setter Property="VerticalOptions">FillAndExpand</Setter>
         <Setter Property="HorizontalOptions">Center</Setter>
